// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Defaults /> should overwrite default values 1`] = `
Array [
  Array [
    Object {
      "AnchorComponent": [Function],
      "i18nLocale": "en",
    },
  ],
]
`;

exports[`<Defaults /> should provide default values 1`] = `
Array [
  Array [
    Object {
      "i18nLocale": "en",
    },
  ],
]
`;

exports[`<Defaults /> should provide values with defaults 1`] = `
Array [
  Array [
    Object {
      "AnchorComponent": [Function],
      "i18nLocale": "en",
    },
  ],
]
`;

exports[`<Defaults /> should still provide default values without Provider 1`] = `
Array [
  Array [
    Object {
      "i18nLocale": "en",
    },
  ],
]
`;
